--- a/portfolio.css
+++ b/portfolio.css
@@ -161,45 +161,20 @@
 
 
 .svg-curve {
+  display: block;
+  margin: 0 !important;
+  padding: 0 !important;
   width: 100vw;
   min-width: 100vw;
   max-width: 100vw;
-  height: 80px;
-  display: block;
   fill: #222;
-  margin: 0;
-  padding: 0;
-  position: relative;
-  left: 0;
-  transform: none;
+  box-sizing: border-box;
 }
 
-
-.link {
-  color: #295eba;
-  text-decoration: none;
-  font-weight:bolder;
-}
-
-.link:hover {
-  color: #4843a0; /* colore al passaggio del mouse */
-}
-
-
-
-
-
-.astra{
- 
-  width: 300px;
-  height: 300px;
-}
-
-.project-center {
-  margin-left: auto;
-  margin-right: auto;
-  float: none;
-  display: block;
+.svg-curve path {
+  margin: 0 !important;
+  padding: 0 !important;
+  box-sizing: border-box;
 }
 
 @media (max-width: 1200px) {
